# pycgdescent

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  REUSE.toml  download_and_patch_sources.sh  justfile  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.basedpyright/: baseline.json
.ci/: requirements-build.in  requirements-build.txt  requirements-test.txt
.ctags.d/: project.ctags
.github/workflows/: ci.yml  codeql.yml  wheels.yml
.reuse/: dep5
docs/: conf.py  index.md  index.rst  justfile  optimization.rst  requirements.txt
docs/css/: custom.css
examples/: driver1.py  driver2.py  driver3.py  driver4.py  driver5.py  high-level-api.py
patches/: 0000-enable-blas.patch  0001-feat-guard-BLAS-defines.patch  0002-feat-extern-C-in-cgdescent-header.patch  0003-feat-add-user-callback.patch  0006-add-step-size-limit.patch  0008-zero-initialize-working-memory.patch  0009-remove-unused-variables.patch
pycgdescent/: __init__.py  _cg_descent.pyi  _private.py
src/: cg_blas.h  cg_descent.c  cg_descent.h  cg_descent_wrap.cpp  cg_user.h
src/pycgdescent/: __init__.py  _cg_descent.pyi
src/wrapper/: SSM.c  SSM.h  SSMdiagopt.c  SSMmult.c  SSMprint.c  SSMrefine.c  SSMtridiag.c  cg_default.c  cg_descent.c  cg_descent.h  cg_descent_wrap.cpp  cg_print.c  cg_util.c  sopt.c  sopt.h
tests/: test_pycgdescent.py
