[project]
name = "pycgdescent"
version = "0.4.1"
description = "Python wrapper for the CG_DESCENT library"
readme= "README.rst"
keywords = [
    "cg",
    "optimization",
]
license = { text = "GPL-2.0" }
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
authors = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
    'typing-extensions; python_version < "3.10"',
]
[project.optional-dependencies]
dev = [
    "isort",
    "mypy",
    "pip-tools",
    "pyproject-fmt",
    "pytest",
    "ruff",
    "types-dataclasses",
]
docs = [
    "sphinx>=6",
    "sphinx-autoapi",
    "sphinx-book-theme",
]
[project.urls]
Documentation = "https://pycgdescent.readthedocs.io"
Repository = "https://github.com/alexfikl/pycgdescent"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pybind11>=2.6",
    "setuptools>=42",
    "wheel",
]

[tool.setuptools]
packages = ["pycgdescent"]

[tool.black]
line-length = 88
target-version = ['py38']
exclude='\.eggs|\.git|\.mypy_cache|build|dist|\.pytest_cache|\.pytype'

[tool.ruff]
preview = true
target-version = "py38"
line-length = 88
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # flake8
    "F",        # flake8
    "FBT",      # flake8-boolean-trap
    "G",        # flake8-logging-format
    "I",        # flake8-isort
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RUF",      # ruff
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # flake8
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "I001",     # unsorted-imports
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "S101",     # assert
    "S102",     # exec-builtin
    "UP037",    # quoted-annotation
]

[tool.ruff.per-file-ignores]
"pycgdescent/_cg_descent.pyi" = ["A003", "N801", "N802", "SIM108", "PLR0904"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
warn_unused_ignores = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "importlib_metadata.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.check-manifest]
ignore = [
    "*.yml",
    "*.yaml",
    ".ci/*",
]
