[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.14",
    "pybind11>=2.6",
    "ninja",
]

[project]
name = "pycgdescent"
version = "0.8.1"
description = "Python wrapper for the CG_DESCENT library"
readme= "README.rst"
keywords = [
    "cg",
    "optimization",
]
license = { text = "GPL-2.0" }
maintainers = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
authors = [{ name = "Alexandru Fikl", email = "alexfikl@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
    'typing-extensions; python_version < "3.10"',
]
[project.optional-dependencies]
dev = [
    "codespell",
    "mypy",
    "pip-tools",
    "pyproject-fmt",
    "pytest",
    "reuse",
    "ruff",
    "types-dataclasses",
]
docs = [
    "sphinx>=6",
    "sphinx-autoapi",
    "sphinx-book-theme",
]
[project.urls]
Documentation = "https://pycgdescent.readthedocs.io"
Repository = "https://github.com/alexfikl/pycgdescent"

[tool.ruff]
preview = true
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "A",        # flake8-builtins
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # flake8
    "F",        # flake8
    "FBT",      # flake8-boolean-trap
    "G",        # flake8-logging-format
    "I",        # flake8-isort
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "NPY",      # numpy
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RUF",      # ruff
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # flake8
]
ignore = [
    "E402",     # module-import-not-at-top-of-file
    "ISC001",   # single-line-implicit-string-concatenation
    "PLC0415",  # import-outside-top-level
    "PLR0913",  # too-many-arguments
    "PLR0917",  # too-many-positional
    "PLR2004",  # magic-value-comparison
    "S101",     # assert
    "S102",     # exec-builtin
    "UP037",    # quoted-annotation
]

[tool.ruff.lint.per-file-ignores]
"src/pycgdescent/_cg_descent.pyi" = ["A003", "N801", "N802", "SIM108", "PLR0904"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pycgdescent"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
strict = true
hide_error_codes = false
warn_unused_ignores = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "importlib_metadata.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true
