[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.14",
    "ninja",
    "pybind11>=2.6",
]

[project]
name = "pycgdescent"
version = "0.11.0"
description = "Python wrapper for the CG_DESCENT library"
readme = "README.rst"
keywords = [
    "cg",
    "optimization",
]
license = "GPL-2.0-or-later AND MIT"
maintainers = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
authors = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.1",
    "typing-extensions>=4.10",
]
# NOTE: this is only here for readthedocs (keep in sync with the dependency group)
optional-dependencies.docs = [
    "sphinx>=6",
    "sphinx-autoapi",
    "sphinx-book-theme",
]
urls.Documentation = "https://pycgdescent.readthedocs.io"
urls.Repository = "https://github.com/alexfikl/pycgdescent"

[dependency-groups]
dev = [ "pyproject-fmt", "reuse", "typos", "uv" ]
# NOTE: typing dependencies: matplotlib, rich
test = [ "matplotlib", "pytest", "pytest-github-actions-annotate-failures", "rich", "ruff", "ty" ]
docs = [ "sphinx>=6", "sphinx-autoapi", "sphinx-book-theme" ]

[tool.cibuildwheel]
build = [
    "cp3{10,11,12,13,14}-*",
]
build-frontend = "uv"
test-command = "python -m pytest {project}/tests"
test-requires = [
    "pytest",
]
linux.skip = [
    "*_i686",
]
macos.environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }
windows.before-build = "pip install delvewheel"
windows.repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
windows.skip = [
    "*-win32",
]

[tool.ruff]
target-version = "py310"
line-length = 88
preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # numpy
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "assert",                                    # assert
    "exec-builtin",                              # exec-builtin
    "import-outside-top-level",                  # import-outside-top-level
    "magic-value-comparison",                    # magic-value-comparison
    "module-import-not-at-top-of-file",          # module-import-not-at-top-of-file
    "non-empty-init-module",                     # non-empty-init-module
    "quoted-annotation",                         # quoted-annotation
    "single-line-implicit-string-concatenation", # single-line-implicit-string-concatenation
    "too-many-arguments",                        # too-many-arguments
    "too-many-positional-arguments",             # too-many-positional
]
lint.exclude = [ "src/pycgdescent/_cg_descent.pyi" ]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.known-first-party = [
    "pycgdescent",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.typos]
default.extend-words.Parms = "Parms"
default.extend-words.Parm = "Parm"
files.extend-exclude = [
    "src/wrapper/*.c",
    "src/wrapper/*.h",
    "patches/*.patch",
]

[tool.pytest]
ini_options.testpaths = "tests"
ini_options.addopts = [
    "-rswx",
    "--durations=25",
    "--verbose",
    "--capture=no",
]

[tool.yamlfix]
line_length = 88
section_whitelines = 1
sequence_style = "block_style"
