[metadata]
name = pycgdescent
version = 0.1.0
author = Alexandru Fikl
author_email = alexfikl@gmail.com
url = https://github.com/alexfikl/pycgdescent
description = Python wrapper for the CG_DESCENT library
long_description = file: README.md
license = GPL-2.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    optimization

[options]
packages = find:
setup_requires =
    setuptools>=42
    wheel
    pybind11>=2.6.0
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    dataclasses; python_version<"3.7"
python_requires = ~=3.6

[options.extras_require]
dev =
    flake8
    flake8-quotes
    pep8-naming
    pylint
    pytest

[flake8]
ignore =
    E123,
    E124,
    E126,
    E127,
    E128,
    E226,
    E402,
    W503,
    D102,
    D103
max-line-length = 88
inline-quotes = double
multiline-quotes = double

[tool:pytest]
testpaths = tests

[pylint.master]
jobs = 4
extension-pkg-whitelist = numpy,pycgdescent._cg_descent
ignored-modules=matplotlib

[pylint.messages_control]
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0411,                  # wrong-import-order
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0902,                  # too-many-instance-attributes
    R0913,                  # too-many-arguments
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611                   # unused-import
