[metadata]
name = pycgdescent
version = 0.4.0
description = Python wrapper for the CG_DESCENT library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = "https://github.com/alexfikl/pycgdescent"
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = GPL-2.0
license_files = LICENSES/GPL-2.0-or-later.txt,LICENCES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    optimization

[options]
packages = find:
install_requires =
    numpy
    typing-extensions;python_version<'3.10'
python_requires = >=3.8
setup_requires =
    pybind11>=2.6.0
    setuptools>=42
    wheel

[options.extras_require]
dev =
    flake8
    flake8-bugbear
    flake8-comprehensions
    flake8-isort
    flake8-quotes
    flake8-rst-docstrings
    mypy
    pep8-naming
    pip-tools
    pylint
    pytest
    types-dataclasses

[flake8]
ignore =
    E123,
    E124,
    E126,
    E127,
    E128,
    E226,
    E402,
    W503,
    D102,
    D103,
    RST399
per-file-ignores =
    pycgdescent/_cg_descent.pyi:E704,N801,N802
max-line-length = 88
inline-quotes = double
multiline-quotes = double
rst-roles =
    attr,
    class,
    func,
    meth,
    mod,
    ref
rst-directives =
    attribute,
    autoclass,
    autofunction,
    automethod,
    currentmodule,
    function,

[check-manifest]
ignore =
    *.yml
    *.yaml
    .ci/*
    .ctags.d/*
    .codespell-ignore

[tool:pytest]
testpaths = tests

[pylint.master]
jobs = 4
extension-pkg-whitelist = numpy,pycgdescent._cg_descent
ignored-modules = matplotlib

[pylint.messages_control]
enable =
    I0021                   # useless-suppression
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0411,                  # wrong-import-order
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0902,                  # too-many-instance-attributes
    R0913,                  # too-many-arguments
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611                   # unused-import

[mypy]
warn_unused_ignores = True
plugins = numpy.typing.mypy_plugin

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True
