[metadata]
name = pycgdescent
version = 0.4.0
description = Python wrapper for the CG_DESCENT library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = "https://github.com/alexfikl/pycgdescent"
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = GPL-2.0
license_files = LICENSES/GPL-2.0-or-later.txt,LICENCES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    optimization

[options]
packages = find:
install_requires =
    numpy
    typing-extensions;python_version<'3.10'
python_requires = >=3.8
setup_requires =
    pybind11>=2.6.0
    setuptools>=42
    wheel

[options.extras_require]
dev =
    mypy
    pip-tools
    pytest
    ruff
    types-dataclasses

[check-manifest]
ignore =
    *.yml
    *.yaml
    .ci/*
    .ctags.d/*
    .codespell-ignore

[tool:pytest]
testpaths = tests
